--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/The-Crow-pleb/banano-calculator#readme",
   "dependencies": {
+    "check-disk-space": "^2.1.0",
     "coingecko-api": "^1.0.10",
     "discord.js": "^12.5.3",
     "discord.js-pagination": "^1.0.3",
@@ -25,7 +26,6 @@
     "moment": "^2.29.1",
     "mongoose": "^5.12.5",
     "ms": "^2.1.3",
-    "node-fetch": "^2.6.1",
-    "request": "^2.88.2"
+    "node-fetch": "^2.6.1"
   }
 }
