--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "coingecko-api": "^1.0.10",
     "discord.js": "^12.5.3",
     "discord.js-pagination": "^1.0.3",
-    "dotenv": "^8.2.0",
-    "mathjs": "^9.3.2",
+    "dotenv": "^8.6.0",
+    "mathjs": "^9.4.3",
     "moment": "^2.29.1",
-    "mongoose": "^5.12.5",
+    "mongoose": "^5.12.14",
     "ms": "^2.1.3",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "qrcode": "^1.4.4"
   }
 }
